# pdc_struct

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  ex-bytes.py  example-arp.py  example.py  pyproject.toml  test.py
.github/workflows/: publish.yml  test-build.yml  test.yml
docs/: planned_work.md  pydantic-feature-request.md
examples/py-c-interprocess/: sensor_sender.py
pdc_struct/: __init__.py  c_types.py  config.py  enums.py  exc.py  models.py  types.py  utils.py
pdc_struct/models/: __init__.py  backup_old_bit_field.py  bit_field.py  struct_config.py  struct_model.py  structmodel_handler.py
pdc_struct/type_handler/: __init__.py  bit_field.py  bool_handler.py  bytes_handler.py  c_int_handler.py  enum_handler.py  float_handler.py  int_handler.py  ipaddr_handler.py  meta.py  string_handler.py  uuid_handler.py
tests/: conftest.py  test_basic.py  test_bitfield.py  test_bitfield_handler.py  test_bitfield_inheritance.py  test_bytes_endianness.py  test_c_type_limits.py  test_enum_types.py  test_exc.py  test_ipaddress_type.py  test_nested_structs.py  test_optional.py  test_str_enum_type.py  test_strings.py  test_types.py  test_uuid_type.py
